deployments/workloads/media/jellyfin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin-deployment
  labels:
    app: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: jellyfin
          image: lscr.io/linuxserver/jellyfin:latest
          ports:
            - containerPort: 8096
            # - containerPort: 7359
            # - containerPort: 1900
          volumeMounts:
            - name: nfs-media
              mountPath: /media/shows
              subPath: shows
            - name: nfs-media
              mountPath: /media/movies
              subPath: movies
            - name: nfs-configs
              mountPath: /config
              subPath: jellyfin
          resources:
            limits:
              memory: "5000Mi"
              cpu: "3000m"
            requests:
              memory: "5000Mi"
              cpu: "2000m"
      volumes:
        - name: nfs-media
          nfs:
            server: 10.10.10.146
            path: /mnt/bigdata/kubernetes/media/data
            readOnly: false
        - name: nfs-configs
          nfs:
            server: 10.10.10.146
            path: /mnt/bigdata/kubernetes/media/configs
            readOnly: false
