deployments/workloads/media/jellyfin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-service
spec:
  selector:
    app: jellyfin
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8096
