deployments/workloads/media/jellyfin/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin-http-route
spec:
  parentRefs:
    - name: media-tls-gateway
  hostnames:
    - "stream.nilsherzig.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: jellyfin
          port: 80
