deployments/workloads/media/jellyfin/cilium.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "jellyfin"
spec:
  endpointSelector:
    matchLabels:
      app: jellyfin
  egress:
    - toPorts:
        - ports:
            - port: "1900"
              protocol: UDP
  ingress:
    - toPorts:
        - ports:
            - port: "8096"
              protocol: TCP
